# kplayer-plugin-show_text

./: CMakeLists.txt  KPVideoShowTextPlugin.cpp  KPVideoShowTextPlugin.h
